# locutus

./: .gitignore  Cargo.toml  README.md  run-client.sh  run-server.sh  rustfmt.toml
locutus-actor/: Cargo.toml
locutus-actor/src/: lib.rs
locutus-client/: Cargo.toml
locutus-client/src/: gameoflife_client.rs  lib.rs  main.rs
locutus-client/static/: index.html  styles.css
locutus-game-of-life/: Cargo.toml
locutus-game-of-life/src/: lib.rs
locutus-server/: Cargo.toml
locutus-server/src/: actors.rs  cli.rs  logger.rs  main.rs  server.rs
