[package]
name = "locutus-client"
version = "0.1.0"
authors = ["Dillon Hicks <dillon@dillonhicks.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "^1.0"
yew = { version="*", features = ["toml"] }
log = "0.4.8"
wasm-logger = "0.2.0"
rand = { version = "0.7.3", features = ["getrandom"] }
getrandom = { version = "0.1.14", features = ["wasm-bindgen"] }
locutus-game-of-life = { path = "../locutus-game-of-life" }
bincode = "^1"