[package]
name = "locutus-game-of-life"
version = "0.1.0"
authors = ["Dillon Hicks <dillon@dillonhicks.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "^1.0", features = ["derive"] }
tracing = "^0.1"
rand = "^0.7"
locutus-actor = { path = "../locutus-actor", features = ["serde"], optional = true }
thiserror = "^1.0"

[features]
default = []
actor = ["locutus-actor"]