[package]
name = "locutus-server"
version = "0.1.0"
authors = ["Dillon Hicks <dillon@dillonhicks.io>"]
edition = "2018"

[dependencies]
tungstenite = "0.10.1"
serde = {version = "^1.0", features = ["derive"] }
tracing-futures = "^0.2"
rayon = "^1.3"
bincode = "^1.3"
tracing = "^0.1"
tracing-subscriber = "^0.2"
rand = "^0.7"
locutus-game-of-life = {path = "../locutus-game-of-life", features = ["actor"]}
crossbeam= "^0.7"
locutus-actor = { path = "../locutus-actor", features = ["serde"] }
serde_json = "^1.0"
parking_lot =  { version = "^0.11", features = ["serde"]}
tokio = {version = "^0.2", features = ["full"]}
tokio-tungstenite = {version = "^0.10"}
futures-util = "^0.3"
structopt = "^0.3"